--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "react-dom": "^18.0.0",
     "react-scripts": "0.9.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
