--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "firebase": "^9.6.11",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^5.3.1",
     "react-scripts": "0.9.5"
   },
