--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-icon": "^1.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1"
   },
