--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-firebase-hooks": "^5.0.3",
-    "react-router-dom": "^5.3.1",
-    "react-scripts": "0.9.5"
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^2.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
@@ -21,5 +21,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
