--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24"
