Add "homepage" attribute with hotiendat.com domain

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "blogsite_client",
+  "homepage": "https://hotiendat.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
