--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ckeditor/ckeditor5-react": "^5.1.0",
     "axios": "^1.3.4",
     "ckeditor5-custom-build": "file:ckeditor5",
+    "dompurify": "^3.0.1",
     "firebase": "^9.17.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
