--- a/.github/workflows/reactjs.yml
+++ b/.github/workflows/reactjs.yml
@@ -1,29 +1,25 @@
-name: Node.js CI
+name: node.js
 
 on:
   push:
     branches: [main]
 jobs:
-  build:
+  push_to_registry:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-      - name: Clone repository
+      - name: Check out the repo
         uses: actions/checkout@v3
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v1
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2.1.0
         with:
-          node-version: 16.x
-      - name: Install dependencies
-        run: npm install
-      - name: Generate build
-        run: npm run build
-        env:
-          CI: false
-      - name: 📂 Sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.3.0
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4.0.0
         with:
-          server: hotiendat.com
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: build/
-          server-dir: public_html/
+          context: .
+          push: true
+          tags: hotiendat/blogsite-client:latest
