--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "vite-plugin-svgr": "^2.4.0"
   },
   "scripts": {
-    "start": "vite",
+    "start": "vite --host",
     "build": "vite build",
     "serve": "vite preview"
   }
